--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
-  "name": "angularjs_intro",
+  "name": "github_angular",
   "version": "0.0.0",
   "authors": [
-    "DanLDB <dpbergquist>"
+    "benja2208"
   ],
   "license": "MIT",
   "ignore": [
@@ -13,13 +13,14 @@
     "tests"
   ],
   "dependencies": {
-    "jquery": "~2.1.3",
-    "bootstrap": "~3.3.4",
-    "angular": "~1.3.15",
-    "angular-resource": "~1.3.15"
+    "angular": "~1.4.5",
+    "angular-resource": "~1.4.5",
+    "bootstrap": "~3.3.5",
+    "jquery": "~2.1.4"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.15",
     "angular-route": "~1.3.15"
-  }
+  },
+  "homepage": "https://github.com/benja2208/angularjs-intro"
 }
